<?xml version="1.0"?>
<package format="2">
  <name>ytcg_ground-nav</name>
  <version>0.1.0</version>
  <description>YTCG ground-based mobile robot navigation interface for the ROS2 package</description>

  <maintainer email="adam.seewald@yale.edu">Adam Seewald</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_depend>orb_slam3_ros_wrapper</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <exec_depend>orb_slam3_ros_wrapper</exec_depend>
</package>
