<?xml version="1.0"?>
<package format="2">
  <name>rb5-ground-nav</name>
  <version>1.0.0</version>
  <description>RB5 ground-navigation ROS package that  package collects point clouds from an RGB-D camera and other data from the SLAM algorithm and ports them into ROS2.</description>
  <maintainer email="adam.seewald@yale.edu">Adam Seewald</maintainer>
  <license>CC BY-NC-SA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
